# parallel-programming

./: .gitignore  README.md
lab0/: makefile  output
lab0/1/: main.py  makefile
lab0/2/: main.cpp  makefile
lab0/4/: main.cpp  makefile
lab0/5/: main.cpp
lab0/6/: main.cpp  makefile
lab1/: README.md  main.c  out.txt
lab10/: CMakeLists.txt  README.md  matrixmul.cu  output.txt  performance_analysis.py  report.md  requirement.md
lab11/: CMakeLists.txt  FindCUDNN.cmake  README.md  performance_results.csv  report.md  requirement.md  run_and_plot.py
lab11/task1/: conv.cu
lab11/task2/: CMakeLists.txt  im2col_gemm_conv.cu
lab11/task3/: CMakeLists.txt  cudnn_conv.cu
lab2/: README.md
lab2/0/: main.c  out.txt
lab2/1/: main.c  makefile  out.txt  test.py
lab2/2/: main.c  makefile  out.txt  test.py
lab3/: README.md
lab3/1/: Makefile  README.md  main.cpp  out.txt  test.py
lab3/2/: README.md  main.cpp  makefile  out.txt  test.py
lab4/1/: main.cpp  makefile  out.txt
lab4/2/: main.cpp  makefile  out.txt  test.py
lab5/: README.md  report.md
lab5/1/: Makefile  main.cpp
lab5/2/: Makefile  out.txt  parallel_for.c  parallel_for.h  run.sh  test.c
lab6/: Makefile  README.md  performance_analyzer.py  report.md  requirement.md
lab6/reference/: heated_plate_openmp.sh
lab6/src/: Makefile  README.md  (+3 more)
lab7/: README.md  report.md  requirement.md
lab8/: Makefile  README.md  generate_test.ipynb  main.cpp  performance_test.py  performance_test.sh  report.md  requirement.md
lab9/: CMakeLists.txt  README.md  analyze_task2.py  report.md  requirement.md
(+21 files in other folders)
